// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spin if indicator set null should not be render default indicator 1`] = `
<Spin
  indicator={null}
  size="default"
  spinning={true}
  wrapperClassName=""
>
  <div
    className="ant-spin ant-spin-spinning"
  />
</Spin>
`;

exports[`Spin rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-spin ant-spin-spinning ant-spin-rtl"
>
  <span
    aria-label="loading"
    class="anticon anticon-loading anticon-spin ant-spin-dot"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <path
        d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
      />
    </svg>
  </span>
</div>
`;

exports[`Spin should render custom indicator when it's set 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <div
    class="custom-indicator ant-spin-dot"
  />
</div>
`;

exports[`Spin should support static method Spin.setDefaultIndicator 1`] = `
<Spin
  size="default"
  spinning={true}
  wrapperClassName=""
>
  <div
    className="ant-spin ant-spin-spinning"
  >
    <em
      className="custom-spinner ant-spin-dot"
    />
  </div>
</Spin>
`;
